--- a/css/style2.css
+++ b/css/style2.css
@@ -26,19 +26,23 @@ body{
 .heading-login{
     color: white;
     position: absolute;
-    top: 100px;
+    top: 80px;
     font-size: 35px;
 }
 .heading-login span{
     color: white;
+    text-align: center;
+    width: 70vw;
+    display: inline-block;
+    height: 10vh;
 }
 .container-login{
     background-color: #1d1c1c;
     height: 60vh;
-    width: 30vw;
+    width: 35vw;
     margin: auto;
     border: 2px solid black;
-    border-radius: 10px;
+    border-radius: 20px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -82,4 +86,42 @@ body{
 }
 .end a{
     color: chartreuse;
+}
+@media (max-width:1200px) {
+    .heading-login span {
+        font-size: 30px;
+        text-align: center;
+        width: 70vw;
+        display: inline-block;
+    }
+    .container-login{
+        height: 65vh;
+        width: 50vw;
+        top: 85px;
+    }
+    .container-login label {
+        font-size: 24px;
+    }
+   
+}
+@media (max-width:600px) {
+    .heading-login{
+        top: 70px;
+        font-size: 22px;
+    }
+    .heading-login span{
+        font-size: 20px;
+        text-align: center;
+        width: 80vw;
+        display: inline-block;
+    
+    }
+    .container-login{
+        height: 68vh;
+        width: 78vw;
+    } 
+    .container-login input {
+        height: 4vh;
+        font-size: 18px;
+    }
 }
