--- a/css/style2.css
+++ b/css/style2.css
@@ -60,25 +60,26 @@ body{
     width: 90%;
     color: black;
     height: 6vh;
-    font-size: 23px;
+    font-size: 20px;
     border: none;
-    border: 1px solid white;
+    border: 1px solid rgb(50, 49, 49);
     border-radius: 10px;
+    padding: 2px 10px;
+    background: none;
 }
 .container-login button{
-    
-        background-color: white;
+        background-color: #1ed760;
         border-radius: 25px;
-        width: 90px;
+        width: 200px;
+        height: 50px;
         padding: 10px;
         font-weight: bold;
-        font-size: 13px;
+        font-size: 25px;
         cursor: pointer;
         margin-left: 10px;
 }
 .container-login button:hover{
-        font-size: 14px;
-      
+        font-size: 26px;     
 }
 .end{
     color: white;
@@ -102,6 +103,15 @@ body{
     .container-login label {
         font-size: 24px;
     }
+    .container-login button{
+        font-size: 17px;
+        width: 156px;
+        height: 30px;
+        padding: 0px;
+}
+.container-login button:hover{
+    font-size: 18px;     
+}
    
 }
 @media (max-width:600px) {
