--- a/css/style2.css
+++ b/css/style2.css
@@ -58,7 +58,7 @@ body{
 }
 .container-login input{
     width: 90%;
-    color: black;
+    color: white;
     height: 6vh;
     font-size: 20px;
     border: none;
