--- a/css/style2.css
+++ b/css/style2.css
@@ -54,6 +54,7 @@ body{
     color: white;
     padding: 6px ;
     font-size: 20px;
+    cursor: pointer;
 
 }
 .container-login input{
@@ -66,6 +67,7 @@ body{
     border-radius: 10px;
     padding: 2px 10px;
     background: none;
+    cursor: pointer;
 }
 .container-login button{
         background-color: #1ed760;
